tests/paczka1/fuzzy1/23988629.err
Error in line 28: yCFby S815 42,8
Error in line 30: yCFby A614 44,9
